# aupt

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README  README.md  gen_files.py
cmake/: EmbedAsset.cmake  GetCPM.cmake
include/core/: core.hpp  drawables.hpp  renderer.hpp  result.hpp  stage.hpp  types.hpp  utils.hpp  window.hpp
include/engine/: triangle.hpp
src/core/: renderer.cpp  stage.cpp  window.cpp
src/engine/: main.cpp  triangle.cpp
